@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-21T01:46:59Z",
+  "timestamp" : "2022-06-21T08:28:22Z",
   "count_outdated" : 2166,
   "uniques_outdated" : 439,
   "count" : 2210,
-  "uniques" : 465,
+  "uniques" : 466,
   "clones" : [
     {
       "timestamp": "2022-06-07T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 7, 8 ],
       "uniques": 5,
       "uniques_minmax": [ 5, 5 ]
+    },
+    {
+      "timestamp": "2022-06-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
