@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-06-07T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-06-20T00:00:00Z",
       "count": 8,
       "uniques": 5
+    },
+    {
+      "timestamp": "2022-06-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
