@@ -1,3 +1,10 @@
+2022-06-21T08:28:22Z:
+* notice: last 14d: unq all: 11 44
+* notice: prev accum: outdated-unq outdated-all / unq all: 439 2166 / 465 2210
+* notice: next accum: outdated-unq outdated-all / unq all: 439 2166 / 466 2210
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-07 2022-06-21]
+
 2022-06-21T01:46:59Z:
 * notice: last 14d: unq all: 11 44
 * notice: prev accum: outdated-unq outdated-all / unq all: 439 2166 / 465 2209
